--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
